--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -2,15 +2,26 @@
 location __PATH__/ {
 
   # Path to source
-  alias __FINALPATH__/ ;
+  alias __FINALPATH__/public ;
 
-### Example PHP configuration (remove it if not used)
+  add_header X-Frame-Options "SAMEORIGIN";
+  add_header X-XSS-Protection "1; mode=block";
+  add_header X-Content-Type-Options "nosniff";
+
   index index.php;
 
   # Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
   #client_max_body_size 50M;
 
-  try_files $uri $uri/ index.php;
+  try_files $uri $uri/ /index.php?$query_string;
+
+  location ~* \.(?:css|js|map|scss)$ {
+    expires 7d;
+    access_log off;
+    add_header Cache-Control "public";
+    try_files $uri @fallback;
+  }
+
   location ~ [^/]\.php(/|$) {
     fastcgi_split_path_info ^(.+?\.php)(/.*)$;
     fastcgi_pass unix:/var/run/php/php__PHPVERSION__-fpm-__NAME__.sock;
@@ -21,7 +32,6 @@ location __PATH__/ {
     fastcgi_param PATH_INFO $fastcgi_path_info;
     fastcgi_param SCRIPT_FILENAME $request_filename;
   }
-### End of PHP configuration part
 
   # Include SSOWAT user panel.
   include conf.d/yunohost_panel.conf.inc;
