--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
-    "name": "Example app",
-    "id": "example",
+    "name": "LinkAce",
+    "id": "linkace",
     "packaging_format": 1,
     "description": {
         "en": "Explain in *a few (10~15) words* the purpose of the app or what it actually does (it is meant to give a rough idea to users browsing a catalog of 100+ apps)",
         "fr": "Expliquez en *quelques* (10~15) mots l'utilité de l'app ou ce qu'elle fait (l'objectif est de donner une idée grossière pour des utilisateurs qui naviguent dans un catalogue de 100+ apps)"
     },
     "version": "1.0~ynh1",
-    "url": "https://example.com",
+    "url": " www.linkace.org",
     "upstream": {
         "license": "free",
-        "website": "https://example.com",
-        "demo": "https://demo.example.com",
+        "website": " www.linkace.org",
+        "demo": "https://demo.linkace.org/",
         "admindoc": "https://yunohost.org/packaging_apps",
         "userdoc": "https://yunohost.org/apps",
-        "code": "https://some.forge.com/example/example"
+        "code": "https://github.com/Kovah/LinkAce"
     },
     "license": "free",
     "maintainer": {
