--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -3,9 +3,9 @@ location / {
   # Path to source
   alias __FINALPATH__/public ;
 
-  add_header X-Frame-Options "SAMEORIGIN";
-  add_header X-XSS-Protection "1; mode=block";
-  add_header X-Content-Type-Options "nosniff";
+  more_set_headers "X-Frame-Options: SAMEORIGIN";
+  more_set_headers "X-XSS-Protection= 1; mode=block";
+  more_set_headers "X-Content-Type-Options: nosniff";
 
   index index.php;
 
