--- a/conf/.env.example
+++ b/conf/.env.example
@@ -9,7 +9,7 @@ APP_URL=http://localhost
 # The environment is usually 'production' but may be changed to 'local' for development
 APP_ENV=production
 # The app key is generated later, please leave it blank
-APP_KEY=
+APP_KEY=__KEY__
 # Enable the debug more if you are running into issues or while developing
 APP_DEBUG=false
 # Indicates that the setup was completed and the app can be used now
