--- a/conf/.env.example
+++ b/conf/.env.example
@@ -57,11 +57,11 @@ MAIL_ENCRYPTION=null
 ## Configuration of the database connection
 ## Attention: Those settings are configured during the web setup, please do not modify them now.
 # Set the database driver (mysql, pgsql, sqlsrv)
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 # Set the host of your database here
 DB_HOST=127.0.0.1
 # Set the port of your database here
-DB_PORT=3306
+DB_PORT=5432
 # Set the database name here
 DB_DATABASE=__DB_NAME__
 # Set both username and password of the user accessing the database
