--- a/conf/.env.example
+++ b/conf/.env.example
@@ -39,7 +39,7 @@ AWS_BUCKET=
 
 
 ## Mail configuration
-MAIL_FROM_ADDRESS=your@email.com
+MAIL_FROM_ADDRESS=your@__DOMAIN__
 MAIL_FROM_NAME=LinkAce
 # Set the driver used for sending email here, default is `smtp`
 MAIL_DRIVER=smtp
