--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
         "website": " www.linkace.org",
         "demo": "https://demo.linkace.org/",
         "admindoc": "https://yunohost.org/packaging_apps",
-        "userdoc": "https://yunohost.org/apps",
+        "userdoc": "https://www.linkace.org/docs/",
         "code": "https://github.com/Kovah/LinkAce"
     },
     "license": "free",
