--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,7 +1,7 @@
 location / {
 
   # Path to source
-  alias __FINALPATH__/public ;
+  alias __FINALPATH__/public/;
 
   more_set_headers "X-Frame-Options: SAMEORIGIN";
   more_set_headers "X-XSS-Protection= 1; mode=block";
