--- a/manifest.json
+++ b/manifest.json
@@ -27,8 +27,7 @@
     "multi_instance": true,
     "services": [
         "nginx",
-        "php8.0-fpm",
-        "mysql"
+        "php8.0-fpm"
     ],
     "arguments": {
         "install" : [
